service-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: drivers-delivery-prod-service-prod
  labels:
    purpose: drivers-delivery-prod
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"ports": {"80":"drivers-delivery-prod-backendconfig-prod"}}'
spec:
  type: NodePort
  selector:
    purpose: drivers-delivery-prod
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
