ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: drivers-delivery-prod-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: drivers-delivery-prod-service-prod
          servicePort: 80
      - path: /test
        backend:
          serviceName: drivers-delivery-prod-service-preprod	
          servicePort: 80
